# Reactjs-DjangoRF-full-stack_Villa_Agency_website

./: .gitignore  pyproject.toml
backend/: .env
backend/authapi/: admin.py  models.py  serializers.py  urls.py  views.py
backend/authapi/migrations/: 0001_initial.py  0002_delete_address.py
backend/backend/: settings.py  urls.py
backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_getintouch_bg_image.py  0003_property_bathrooms_property_parking.py  0004_property_price.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  axios.js  axios.ts
frontend/src/components/Footer/: Footer.jsx  Footer.scss  Footer.tsx
frontend/src/components/Header/: Header.jsx  Header.scss
frontend/src/containers/: index.ts
frontend/src/containers/Banner/: Banner.jsx  Banner.scss  Banner.tsx
frontend/src/containers/Bestdeal/: Bestdeal.jsx  Bestdeal.scss  Bestdeal.tsx
frontend/src/containers/Contactus/: Contactus.jsx  Contactus.scss  Contactus.tsx
frontend/src/containers/Featured/: Featured.jsx  Featured.scss
frontend/src/containers/Properties/: Properties.jsx  Properties.scss  Properties.tsx
frontend/src/containers/Singleproperty/: Singleproperty.jsx  Singleproperty.scss  Singleproperty.tsx
frontend/src/containers/Vedioview/: Vedioview.jsx  Vedioview.scss  Vedioview.tsx
frontend/src/pages/: Homepage.tsx  index.ts
frontend/src/pages/Allproperties/: Allproperties.jsx  Allproperties.scss  Allproperties.tsx
frontend/src/pages/Authenticate/: Authenticate.jsx  Authenticate.scss  (+1 more)
(+9 files in other folders)
